added pagination, email templating and authorisation
