# handlers/question_handler.go
@@ -9,15 +9,24 @@ import (
 	openapi_types "github.com/oapi-codegen/runtime/types"
 )
 
-func (s Server) GetCampaignsCampaignIdQuestions(c *fiber.Ctx, campaignId openapi_types.UUID) error {
+func (s Server) GetCampaignsCampaignIdQuestions(c *fiber.Ctx, campaignId openapi_types.UUID, params api.GetCampaignsCampaignIdQuestionsParams) error {
 	if campaignId == uuid.Nil {
 		return c.Status(fiber.StatusBadRequest).JSON(api.Error{
 			ErrorCode: "400",
 			Message:   "Invalid campaign ID",
 		})
 	}
+	limit := 10
+	offset := 0
 
-	questions, err := s.questionService.GetQuestionsByCampaign(context.Background(), campaignId)
+	if params.Limit != nil {
+		limit = *params.Limit
+	}
+	if params.Offset != nil {
+		offset = *params.Offset
+	}
+
+	questions, err := s.questionService.GetQuestionsByCampaign(context.Background(), campaignId, limit, offset)
 	if err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(api.Error{
 			ErrorCode: "500",
@@ -39,17 +48,19 @@ func (s Server) PostCampaignsCampaignIdQuestions(c *fiber.Ctx, campaignId openap
 		})
 	}
 
-	newQuestion := new(api.Question)
-	if err := c.BodyParser(newQuestion); err != nil {
+	var newQuestions []api.Question
+	if err := c.BodyParser(&newQuestions); err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(api.Error{
 			ErrorCode: "400",
 			Message:   err.Error(),
 		})
 	}
 
-	newQuestion.CampaignId = campaignId
+	for i := range newQuestions {
+		newQuestions[i].CampaignId = campaignId
+	}
 
-	createdQuestion, err := s.questionService.CreateQuestion(context.Background(), *newQuestion)
+	createdQuestion, err := s.questionService.CreateQuestions(context.Background(), newQuestions)
 	if err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(api.Error{
 			ErrorCode: "500",
