# repository/response_repo.go
@@ -6,6 +6,6 @@ import (
 )
 
 type ResponseRepository interface {
-	GetResponsesByQuestion(questionID uuid.UUID) ([]models.Response, error)
+	GetResponsesByQuestion(questionID uuid.UUID, limit, offset int) ([]models.Response, int64, error)
 	CreateResponse(response *models.Response) (*models.Response, error)
 }
